[package]
name = "pwmp-client"
version = "2.1.3"
edition = "2021"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "The PixelWeather Messaging Protocol client."
rust-version = "1.84"
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwmp-client"

[dependencies]
thiserror = "2.0.11"
pwmp-msg = { git = "https://github.com/PixelWeatherProject/pwmp-msg", tag = "v2.1.2" }
arrayref = "0.3.9"
libc = { version = "0.2.171", default-features = false }
