[package]
name = "pwmp-client"
version = "2.1.10"
edition = "2021"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "The PixelWeather Messaging Protocol client."
rust-version = "1.84"
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwmp-client"

[dependencies]
thiserror = "2.0.12"
pwmp-msg = { git = "https://github.com/PixelWeatherProject/pwmp-msg", tag = "v2.1.7" }
arrayref = "0.3.9"
libc = { version = "0.2.172", default-features = false }
