[package]
name = "pwmp-client"
version = "2.2.0"
edition = "2021"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "The PixelWeather Messaging Protocol client."
rust-version = "1.93"
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwmp-client"

[dependencies]
thiserror = "2.0.18"
pwmp-msg = { git = "https://github.com/PixelWeatherProject/pwmp-msg", tag = "v2.1.9" }
libc = { version = "0.2.183", default-features = false }
